Github icon color not showing correctly

--- a/src/app/main/home/detail/detail-theme.scss
+++ b/src/app/main/home/detail/detail-theme.scss
@@ -2,9 +2,6 @@
 
 @mixin detail-theme($theme) {
   $primary: map-get($theme, color, primary);
-  $accent: map-get($theme, color, accent);
-  $warn: map-get($theme, color, warn);
-  $typography: map-get($theme, typography);
   $background: map-get($theme, color, background);
   $foreground: map-get($theme, color, foreground);
   $is-dark: map-get($theme, color, is-dark);
@@ -18,15 +15,15 @@
   .right-container {
 
     .img-container {
-      img {
+      o-gallery-image {
         @if $is-dark {
           box-shadow: 6.6px 8.26px 14.86px 0px #00000040;
         }
-
-        @else {
-          box-shadow: 0px 4px 4px 0px #00000029;
-        }
       }
+    }
+
+    .description {
+      color: mat.get-color-from-palette($foreground, text);
     }
   }
 
@@ -38,7 +35,6 @@
     }
 
     .github-btn {
-      background-color: mat.get-color-from-palette($primary, 500);
 
       @if $is-dark {
         color: #000000DE;
@@ -46,6 +42,16 @@
 
       @else {
         color: #FFFFFFDE;
+      }
+
+      .mdc-button__label {
+        @if $is-dark {
+          fill: #000000DE;
+        }
+
+        @else {
+          fill: #FFFFFFDE;
+        }
       }
     }
   }
