--- a/src/app/main/home/detail/detail.component.scss
+++ b/src/app/main/home/detail/detail.component.scss
@@ -1,78 +1,78 @@
-.main-scroll {
-  overflow: auto;
+.top-container {
+  display: flex;
+  justify-content: flex-start;
+  padding: 40px 232px 0;
+
+  .mdc-button {
+    border-style: none;
+    font-size: 20px;
+  }
+}
+
+.bottom-container {
+  display: flex;
+  flex-direction: row;
+  padding: 40px 232px;
+  justify-content: space-between;
+  column-gap: 40px;
   height: 100%;
-  width: 100%;
 
-  .top-container {
+  .left-container {
     display: flex;
-    justify-content: flex-start;
-    padding: 40px 232px;
+    flex-direction: column;
+    overflow: hidden;
+    min-width: 400px;
+    max-width: 400px;
 
-    .mdc-button {
-      border-style: none;
-      font-size: 20px;
+    .text {
+      h1 {
+        font-size: 36px;
+        font-weight: 700;
+        margin-top: 0;
+      }
+
+      h3 {
+        font-size: 22px;
+        font-weight: 400;
+      }
     }
+
+    .github-btn {
+      width: 400px;
+      border-radius: 4px;
+
+      .mat-mdc-button-base {
+        height: 64px;
+        border-radius: 4px;
+
+        .mdc-button__label {
+          font-size: 24px;
+        }
+      }
+    }
+
   }
 
-  .bottom-container {
+  .right-container {
     display: flex;
-    flex-direction: row;
-    padding: 40px 232px;
-    justify-content: center;
-    column-gap: 40px;
+    flex-direction: column;
+    align-items: start;
+    overflow: auto;
+    height: calc(100% - 112px);
+    width: fit-content;
 
-    .left-container {
-      display: flex;
-      flex-direction: column;
-
-      .text {
-        h1 {
-          font-size: 36px;
-          font-weight: 700;
-        }
-
-        h3 {
-          font-size: 22px;
-          font-weight: 400;
-        }
-      }
-
-      a {
-        text-decoration: none;
-
-        .github-btn {
-          display: flex;
-          height: 64px;
-          width: 400px;
-          border-radius: 5px;
-          align-items: center;
-          justify-content: center;
-
-          img {
-            margin-right: 10px;
-          }
-        }
-      }
+    .ellipsis {
+      margin-top: 70px;
     }
 
-    .right-container {
-      display: flex;
-      flex-direction: column;
-      align-items: start;
+    .description {
+      margin-top: 50px;
+    }
 
-      .ellipsis {
-        margin-top: 120px;
-      }
-
-      .description {
-        margin-top: 100px;
-      }
-
-      .img-container {
-        width: fit-content;
-        height: fit-content;
-        margin-bottom: 20px;
-      }
+    .img-container {
+      width: fit-content;
+      height: fit-content;
+      margin-bottom: 20px;
     }
   }
 }
